package haltingproblem.programs;

public interface Program {
    void run();
    String getName();
}
